[gd_scene load_steps=2 format=3 uid="uid://btdulj7xc31dn"]

[ext_resource type="Script" uid="uid://c47q4y1qgqvf4" path="res://character/user_interface/idle/character_card/components/character_data_components/character_card_task_component.gd" id="1_ktbk6"]

[node name="CharacterCardTask" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ktbk6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="TaskLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Task: None"
horizontal_alignment = 1

[node name="TaskProgressBar" type="ProgressBar" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="ClearTaskButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Clear Task"

[connection signal="pressed" from="VBoxContainer/ClearTaskButton" to="." method="_call_clear_character_task"]
